# CPP-Conan-Template

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  Dockerfilee  README.md  build.sh  conanfile.txt  run-test.sh  run.sh
cmake/: Dependencies.cmake
include/: HttpClient.hpp  IHttpClient.hpp  MockHttpClient.hpp  User.hpp
scripts/: build.sh  run-test.sh  run.sh
src/: main.cpp  main2.cpp
templates/: index.html
tests/: test_httpclient.cpp
